--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,15 +1,35 @@
-name: my-snap-name # you probably want to 'snapcraft register <name>'
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+name: neofetch
+version: '3.3.0'
+summary: A fast, highly customizable system info script
 description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
+  A fast, highly customizable system info script
 
-confinement: devmode # use 'strict' once you have the right plugs and slots
+confinement: strict
+grade: stable
 
 parts:
-  my-part:
-    # See 'snapcraft plugins'
-    plugin: nil
+  neofetch:
+    after: [desktop-glib-only]
+    plugin: make
+    source: https://github.com/dylanaraps/neofetch.git
+    source-tag: $SNAPCRAFT_PROJECT_VERSION
+    stage-packages:
+    - w3m
+    - imagemagick
+    - cmus
+    - feh
+    - mpc
+    - nitrogen
+    - scrot
+    - x11-utils
+    - moc
+    install: |
+      sed 's|ASCIIDIR|${SNAP}/usr/share/neofetch/ascii/distro|g;s|CONFDIR|${SNAP}/etc/neofetch|g' < neofetch > $SNAPCRAFT_PART_INSTALL/usr/bin/neofetch
+
+apps:
+  neofetch:
+    command: desktop-launch $SNAP/usr/bin/neofetch
+    plugs:
+    - hardware-observe
+    - desktop
+
